app/styles/app.css
/* ... */
/* Special Home Screen event -- 1 App centering (319px and down) */
@media (max-width:320px){
	.app-wrap{width:100%;padding:0;margin-top:1.25rem;}
	.app-container{padding-left:5px;padding-right:5px;}
	.app-box-wrap{width:90px;}
}

/* Small devices (tablets, 768px and up) */
@media (min-width:768px){
	.nav{display:inline-block;float:left;padding-right:50px;}
	.card-list-wrap{min-width:310px;display:inline-block;padding-left:0;padding-right:0;}
	.card-list-card{width:310px;}
	.card-list-container{max-width:none;padding-right:0;padding-left:0;}
	.profile-list-card{min-width:310px;margin-left:0;margin-right:1.875rem;}
	.app-box-wrap{width:190px;padding:0;}
	.app-box{height:auto;margin:1.125rem auto;width:100%;margin-left:0px;margin-right:0px!important;}
	.app-box img{width:144px;-webkit-box-shadow:0px 0px 70px 0px rgba(44,150,255,1);-moz-box-shadow:0px 0px 70px 0px rgba(44,150,255,1);box-shadow:0px 0px 70px 0px rgba(44,150,255,1);-moz-border-radius:28px;-webkit-border-radius:28px;border-radius:28px;}
	.app-center{width:100%;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;justify-content:space-between;}
	.app-wrap{width:95%;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;justify-content:space-between;align-items:center;}
	.app-container{width:100%;display:flex;flex-wrap:wrap;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;justify-content:space-between;}
	div.app-text-container > h3{font-size:1.25rem;margin-bottom:1.75rem;}	
	div.card-list-container.profile-content-wrapper > div > h5.h5-landing{margin-top:25px;}
	.sidebar-list{width:245px;margin-bottom:20px;padding-right:0;}
	.sidebar-list .btn{margin-bottom:5px;}
	.btn-home-button{position:absolute;top:0;left:0;right:auto;}
	div.home-profiles a .btn-home-button{position:absolute;top:75px;left:0px;right:auto;}
	.wallet-container{width:900px;padding:0;}
	.item-sidebar-wallet.active,.list-group-item.item-sidebar-wallet{padding-left:6.25rem;padding-right:6.25rem;}
}

/* Medium devices (desktops, 975px to 992px) */
@media (min-width:975px){
	.card-list-wrap{min-width:330px;margin-right:30px;margin-right:1.875rem;}
	.pro-wrap{min-width:905px;}
	.app-container{max-width:954px;margin:0 auto;}
	.app-wrap{width:90%;margin-top:25%;}
	.app-box-wrap{width:190px;padding:0;}
.app-box img {  
  width: 152px; 
  -webkit-box-shadow: 0px 0px 80px 0px rgba(0,0 ,0,0.15);
  -moz-box-shadow: 0px 0px 80px 0px rgba(0,0,0,0.15);
  box-shadow: 0px 0px 80px 0px rgba(0,0,0,0.15);
  -moz-border-radius: 30px;
  -webkit-border-radius: 30px;
  border-radius: 30px;
}
	.wallet-container{max-width:950px;}
	.wallet-content{padding:35px 50px 50px 50px;}
	.item-sidebar-wallet.active,.list-group-item.item-sidebar-wallet{padding-left:9.25rem;padding-right:9.25rem;}
}

/* Medium devices (desktops, 975px and up) */
/* NOTE: change breaking point @media (min-width: 975px;) to @media (min-width: 992px;) in blockstack-bootstrap as this is a non-standard break point */
@media (min-width:992px){
	.card-list-wrap{min-width:330px;margin-right:30px;margin-right:1.875rem;}
	.pro-wrap{min-width:905px;}
	.app-container{max-width:954px;margin:0 auto;}
	.app-wrap{width:95%;margin-top:25%;}
	.app-box-wrap{width:190px;padding:0;}
	.app-box img{width:152px;-webkit-box-shadow:0px 0px 80px 0px rgba(0,0,0,0.15);-moz-box-shadow:0px 0px 80px 0px rgba(0,0,0,0.15);box-shadow:0px 0px 80px 0px rgba(0,0,0,0.15);-moz-border-radius:33px;-webkit-border-radius:33px;border-radius:33px;}
	.wallet-container{width:950px;}
}

/* Large devices (large desktops, 1200px to 1400px) */
@media (min-width:1200px){
	.app-container{max-width:initial;}
	.app-wrap{width:90%;margin-top:25%;}
	.profile-content-wrapper{margin-left:160px;max-width:1460px;width:initial;margin-right:0;}
	.pro-wrap{min-width:80%;}
	.wallet-container{width:1000px;}
}

/* Extra large devices (large desktops, 1400px and up) */
@media (min-width:1400px){
	.app-wrap{width:75%;max-width:1150px;margin-top:18%;}
}

